Fixes theories generating the same value on all trials